--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=stylesheet href=https://cdn.materialdesignicons.com/3.3.92/css/materialdesignicons.min.css><title>Chat App</title><script src=https://cdn.scaledrone.com/scaledrone.min.js></script><link href=/chatapp/css/app.b80c3787.css rel=preload as=style><link href=/chatapp/css/chunk-vendors.10dea550.css rel=preload as=style><link href=/chatapp/js/app.d905f31b.js rel=preload as=script><link href=/chatapp/js/chunk-vendors.2a9bf76d.js rel=preload as=script><link href=/chatapp/css/chunk-vendors.10dea550.css rel=stylesheet><link href=/chatapp/css/app.b80c3787.css rel=stylesheet></head><body><noscript><strong>We're sorry but chat-app doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/chatapp/js/chunk-vendors.2a9bf76d.js></script><script src=/chatapp/js/app.d905f31b.js></script></body></html>
+<!DOCTYPE html>
+<html lang=en>
+   <head>
+      <meta charset=utf-8>
+      <meta http-equiv=X-UA-Compatible content="IE=edge">
+      <meta name=viewport content="width=device-width,initial-scale=1">
+      <link rel=stylesheet href=https://cdn.materialdesignicons.com/3.3.92/css/materialdesignicons.min.css>
+      <title>Chat App</title>
+      <script src=https://cdn.scaledrone.com/scaledrone.min.js></script>
+      <link href=./css/app.b80c3787.css rel=preload as=style>
+      <link href=./css/chunk-vendors.10dea550.css rel=preload as=style>
+      <link href=./js/app.d905f31b.js rel=preload as=script>
+      <link href=./js/chunk-vendors.2a9bf76d.js rel=preload as=script>
+      <link href=./css/chunk-vendors.10dea550.css rel=stylesheet>
+      <link href=./css/app.b80c3787.css rel=stylesheet>
+   </head>
+   <body>
+      <noscript><strong>We're sorry but chat-app doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript>
+      <div id=app></div>
+      <script src=./js/chunk-vendors.2a9bf76d.js></script><script src=./js/app.d905f31b.js></script>
+   </body>
+</html>
